--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "babel-polyfill": "^6.26.0",
     "cross-env": "^5.2.0",
     "solidity-docgen": "^0.1.0",
+    "truffle-typings": "^1.0.8",
     "yenv": "^2.1.0"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "truffle test",
     "compile": "cross-env NODE_ENV=development truffle compile",
     "migrate": "cross-env NODE_ENV=development truffle migrate",
     "console": "cross-env NODE_ENV=development truffle console"
