--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,26 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2017",
     "module": "commonjs",
 
     "strict": true,
-    "types": ["./node_modules/truffle-typings"],
-    "esModuleInterop": true
-  }
+    "moduleResolution": "node",
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["es2015", "esnext.asynciterable"],
+
+    "sourceMap": true,
+    "typeRoots": ["./node_modules/@types", "./types"],
+
+    "rootDir": "./test_ts",
+    "outDir": "./test",
+    "strict": true,
+    "types": ["node", "./node_modules/truffle-typings"],
+    "esModuleInterop": true,
+    "moduleResolution": "node"
+  },
+  "exclude": ["node_modules"]
 }
