--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "web3": "^1.0.0-beta.52",
     "web3x-codegen": "^4.0.1"
   },
+  "resolutions": {
+    "solmd/solc": "0.5.8"
+  },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
     "bn.js": "^4.11.8",
     "cross-env": "^5.2.0",
-    "solidity-docgen": "^0.1.0",
+    "solmd": "^0.4.0",
     "truffle-typings": "^1.0.8",
     "yenv": "^2.1.0"
   },
@@ -24,9 +27,10 @@
     "compile": "cross-env NODE_ENV=development truffle compile && yarn build:types",
     "migrate": "cross-env NODE_ENV=development truffle migrate",
     "console": "cross-env NODE_ENV=development truffle console",
+    "build:doc": "solmd --no-toc contracts/Atola.sol --dest doc/Atola.md",
     "build:types": "web3x-codegen",
     "build:tests": "tsc",
-    "build": "yarn compile && yarn build:types && yarn build:tests",
+    "build": "yarn compile && yarn build:docs && yarn build:types && yarn build:tests",
     "clean:tests": "rm -rf test/",
     "clean:truffle": "rm -rf build/",
     "clean": "yarn clean:tests && yarn clean:truffle",
