--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "url": "git+ssh://git@gitlab.com/atola/smart-contract.git"
   },
   "author": "tshabs",
-  "license": "MPL-2.0",
+  "license": "AGPLv3",
   "bugs": {
     "url": "https://gitlab.com/atola/smart-contract/issues"
   },
