--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "sourceMap": true,
     "typeRoots": ["./node_modules/@types", "./types"],
 
-    "rootDir": "./test_ts",
-    "outDir": "./test",
+    "rootDir": "./src",
+    "outDir": "./",
     "strict": true,
     "types": ["node", "./node_modules/truffle-typings"],
     "esModuleInterop": true,
