Fix clean/build scripts

--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
   },
   "scripts": {
     "test": "truffle test",
-    "compile": "cross-env NODE_ENV=development truffle compile && yarn build:types",
-    "migrate": "cross-env NODE_ENV=development truffle migrate",
-    "console": "cross-env NODE_ENV=development truffle console",
+    "compile": "truffle compile && yarn build:types",
+    "migrate": "truffle migrate",
+    "console": "truffle console",
     "build:doc": "solmd --no-toc contracts/Atola.sol --dest doc/Atola.md",
     "build:types": "web3x-codegen",
     "build:tests": "tsc",
-    "build": "yarn compile && yarn build:docs && yarn build:types && yarn build:tests",
+    "build": "yarn compile && yarn build:doc && yarn build:types && yarn build:tests",
     "clean:tests": "rm -rf test/",
     "clean:truffle": "rm -rf build/",
-    "clean": "yarn clean:tests && yarn clean:truffle",
+    "clean:types": "rm -rf src/contracts",
+    "clean": "yarn clean:tests && yarn clean:truffle && yarn clean:types",
     "cleanAndBuild": "yarn clean && yarn build",
     "postinstall": "git submodule update --init"
   },
