--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "cross-env": "^5.2.0",
     "solmd": "^0.4.0",
     "truffle-typings": "^1.0.8",
-    "web3x": "^4.0.4",
+    "web3x": "4.0.4",
     "yenv": "^2.1.0"
   },
   "scripts": {
