Update npm scripts to delete migrations/ folder in clean:ts

--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "console": "truffle console",
     "build:doc": "solmd --no-toc contracts/Atola.sol --dest doc/Atola.md",
     "build:types": "web3x-codegen",
-    "build:tests": "tsc",
-    "build": "yarn compile && yarn build:doc && yarn build:tests",
-    "clean:tests": "rm -rf test/",
+    "build:ts": "tsc",
+    "build": "yarn compile && yarn build:doc && yarn build:ts",
+    "clean:ts": "rm -rf test/ && rm -rf migrations/",
     "clean:truffle": "rm -rf build/",
     "clean:types": "rm -rf src/contracts",
-    "clean": "yarn clean:tests && yarn clean:truffle && yarn clean:types",
+    "clean": "yarn clean:ts && yarn clean:truffle && yarn clean:types",
     "cleanAndBuild": "yarn clean && yarn build",
     "postinstall": "git submodule update --init"
   },
