--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "truffle": "^5.0.22",
     "web3": "^1.0.0-beta.52",
-    "web3x-codegen": "^4.0.1"
+    "web3x": "4.0.4",
+    "web3x-codegen": "4.0.4"
   },
   "resolutions": {
     "solmd/solc": "0.5.8"
@@ -20,7 +21,6 @@
     "cross-env": "^5.2.0",
     "solmd": "^0.4.0",
     "truffle-typings": "^1.0.8",
-    "web3x": "4.0.4",
     "yenv": "^2.1.0"
   },
   "scripts": {
