--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "dependencies": {
-    "truffle": "^5.0.22",
+    "truffle": "5.0.43",
     "web3": "^1.0.0-beta.52",
     "web3x": "4.0.4",
     "web3x-codegen": "4.0.4"
