--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "truffle": "5.0.43",
-    "web3": "^1.0.0-beta.52",
-    "web3x": "4.0.4",
-    "web3x-codegen": "4.0.4"
-  },
+  "dependencies": {},
   "resolutions": {
     "solmd/solc": "0.5.8"
   },
