--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
     "solmd/solc": "0.5.8"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-vyper": "^2.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@typechain/ethers-v5": "^6.0.5",
     "babel-polyfill": "^6.26.0",
     "bn.js": "^4.11.8",
     "cross-env": "^5.2.0",
+    "ethereum-waffle": "^3.3.0",
+    "ethers": "^5.0.0",
+    "hardhat": "^2.1.2",
+    "hardhat-typechain": "^0.3.5",
     "solmd": "^0.4.0",
     "truffle-typings": "^1.0.8",
     "yenv": "^2.1.0"
