--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-vyper": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^4.0.0",
     "@typechain/ethers-v5": "^6.0.5",
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "babel-polyfill": "^6.26.0",
     "bn.js": "^4.11.8",
     "cross-env": "^5.2.0",
@@ -31,20 +33,10 @@
     "yenv": "^2.1.0"
   },
   "scripts": {
-    "test": "truffle test",
-    "compile": "truffle compile && yarn build:types",
-    "migrate": "truffle migrate",
-    "console": "truffle console",
-    "build:doc": "solmd --no-toc contracts/Atola.sol --dest doc/Atola.md",
-    "build:types": "web3x-codegen",
-    "build:ts": "tsc",
-    "build": "yarn compile && yarn build:doc && yarn build:ts",
-    "clean:ts": "rm -rf test/ && rm -rf migrations/",
-    "clean:truffle": "rm -rf build/",
-    "clean:types": "rm -rf src/contracts/types",
-    "clean": "yarn clean:ts && yarn clean:truffle && yarn clean:types",
-    "cleanAndBuild": "yarn clean && yarn build",
-    "postinstall": "git submodule update --init"
+    "clean": "yarn hardhat clean && rm -rf ./typechain ./typechain-extra ./dist",
+    "compile": "yarn hardhat compile && yarn compile:extra",
+    "compile:extra": "typechain \"./node_modules/@uniswap/v2-core/build/!(Combined-Json)*.json\" --target=ethers-v5 --outDir=typechain-extra",
+    "deploy": "yarn tsc && yarn hardhat run dist/scripts/deploy.js --network localhost"
   },
   "repository": {
     "type": "git",
