--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "babel-polyfill": "^6.26.0",
     "bn.js": "^4.11.8",
+    "chai": "^4.3.4",
     "cross-env": "^5.2.0",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.0.0",
