--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.0.0",
     "hardhat": "^2.1.2",
+    "hardhat-docgen": "^1.1.1",
     "hardhat-typechain": "^0.3.5",
-    "solmd": "^0.4.0",
     "truffle-typings": "^1.0.8",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
