--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "smart-contract",
   "version": "0.1.0",
-  "description": "Smart contracts for swap-box project.",
+  "description": "Smart contracts for the swapbox project.",
   "main": "truffle-config.js",
   "directories": {
     "test": "test"
