--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.0.0",
     "@typechain/ethers-v5": "^6.0.5",
+    "@typechain/hardhat": "^5.0.0",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "babel-polyfill": "^6.26.0",
     "bn.js": "^4.11.8",
     "chai": "^4.3.4",
     "cross-env": "^5.2.0",
@@ -25,8 +25,6 @@
     "ethers": "^5.0.0",
     "hardhat": "^2.1.2",
     "hardhat-docgen": "^1.1.1",
-    "hardhat-typechain": "^0.3.5",
-    "truffle-typings": "^1.0.8",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
     "typechain": "^4.0.3",
