--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.0.0",
     "hardhat": "^2.1.2",
+    "hardhat-dependency-compiler": "^1.1.2",
     "hardhat-docgen": "^1.1.1",
+    "hardhat-tracer": "^1.1.0-rc.6",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
     "typechain": "^7.0.0",
